@@ -253,9 +253,9 @@ success() {
      initlog $INITLOG_ARGS -n $0 -s "$1" -e 1
   else
      # silly hack to avoid EPIPE killing rc.sysinit
-     trap SIGPIPE
+     trap "" SIGPIPE
      echo "$INITLOG_ARGS -n $0 -s \"$1\" -e 1" >&21
-     trap -
+     trap - SIGPIPE
   fi
   [ "$BOOTUP" != "verbose" ] && echo_success
   return 0
@@ -267,9 +267,9 @@ failure() {
   if [ -z "$IN_INITLOG" ]; then
      initlog $INITLOG_ARGS -n $0 -s "$1" -e 2
   else
-     trap SIGPIPE
+     trap "" SIGPIPE
      echo "$INITLOG_ARGS -n $0 -s \"$1\" -e 2" >&21
-     trap -
+     trap - SIGPIPE
   fi
   [ "$BOOTUP" != "verbose" ] && echo_failure
   return $rc
@@ -281,9 +281,9 @@ passed() {
   if [ -z "$IN_INITLOG" ]; then
      initlog $INITLOG_ARGS -n $0 -s "$1" -e 1
   else
-     trap SIGPIPE
+     trap "" SIGPIPE
      echo "$INITLOG_ARGS -n $0 -s \"$1\" -e 1" >&21
-     trap -
+     trap - SIGPIPE
   fi
   [ "$BOOTUP" != "verbose" ] && echo_passed
   return $rc
