@@ -1,3 +1,13 @@
+1999-07-27  Bill Nottingham  <nottingredhat.com>
+
+	* rc.d/init.d/functions:
+	trap sigpipe in shell...
+
+1999-07-26  Bill Nottingham  <nottingredhat.com>
+
+	* ppp/ip-up:
+	added stuff for heartbeat monitoring
+
 1999-07-26  Bill Nottingham  <notting@redhat.com>
 
 	* sysconfig/network-scripts/ifup:
